# islamic-knowledge-platform

./: .gitignore  FEATURES.md
.github/workflows/: ci.yml
backend/api/: pyproject.toml
backend/api/app/: __init__.py  config.py  main.py
backend/api/app/data/: basic_islamic_terms.py  initial_content.py  madhab_specific_content.py  regional_sample_data.py  seed_data.py
backend/api/app/models/: database.py  regional_context.py  scholar.py  user_preferences.py
backend/api/app/routers/: accessibility.py  knowledge_base.py  personalization.py  regional.py  scholar.py  user_preferences.py
backend/api/app/scripts/: check_database.py  create_regional_rulings.sql  create_regional_tables.sql  create_tables.sql  create_user_preferences_table.sql  execute_migrations.py  seed_basic_terms.py  seed_database.py  seed_initial_content.py  seed_madhab_content.py  seed_regional_data.py  seed_supabase.py  seed_supabase_db.py  setup_database.py  test_ai_service.py  test_db_connection.py  test_responses.py  test_supabase_connection.py  verify_database.py  verify_supabase_setup.py  verify_supabase_tables.py
backend/api/app/scripts/migrations/: 001_create_regional_tables.sql  002_create_user_preferences.sql  003_create_scholar_tables.sql
backend/api/app/services/: ai_service.py  supabase_client.py
backend/api/app/tests/: conftest.py  test_accessibility.py  test_ethical_compliance.py  test_integration.py  test_personalization.py  test_regional.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  (+3 more)
(+13 files in other folders)
